# Demo_project_Library

./: .dockerignore  README.md  docker-compose.yml  now.txt
.github/workflows/: docker-image.yml
Books/: Dockerfile  requirements.txt  setup.cfg
Books/adapters/RabbitMQ/: settings.py
Books/adapters/api/: controllers.py
Books/adapters/db/: db__init.py
Books/application/: dataclasses.py  services.py
Books/tests/: conftest.py
Books/tests/units/application/: conftest.py
Books/tests/units/application/services/: test_bookservice.py
Issues/: run.py
Issues/adapters/RabbitMQ/: consumer.py  scheme.py
Issues/adapters/api/: app.py
Issues/application/: dataclasses.py  interfaces.py  services.py
Issues/composites/: issues_api.py
Users/: Dockerfile
Users/adapters/api/: controllers.py  settings.py
Users/application/: dataclasses.py  errors.py
Users/tests/: conftest.py
books/: run.py
books/adapters/RabbitMQ/: __init__.py  scheme.py
books/adapters/api/: __init__.py  app.py
books/application/: errors.py  interfaces.py  services.py
books/composites/: books_api.py
docker/postgres/: init.sql
http_requests/: all.http
issues/: setup.cfg
issues/adapters/RabbitMQ/: consumer.py
issues/adapters/api/: controllers.py  (+1 more)
issues/application/: dataclasses.py  errors.py
issues/tests/: conftest.py
tests/http_requests/: all.http
tests/tests_Books/: conftest.py
tests/tests_Issues/: conftest.py
tests/tests_Users/: conftest.py
users/: Dockerfile  run.py  setup.cfg
users/application/: interfaces.py  services.py
users/composites/: users_api.py
(+22 files in other folders)
