[metadata]
name = BookService
version = 1.0.0
description = Микросервис по работе с книгами
author = Vladimir Bobrovnikov
author_email = Vladimir.Bobrovnikov2@evraz.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.7.0

install_requires =
    attrs==21.2.0
    falcon~=3.0.1
    gunicorn~=20.0.4
    pydantic~=1.8.2
    psycopg2-binary~=2.9.3
    sqlalchemy~=1.4.23
    backports.cached-property~=1.0.1
    classic-app-layer==0.0.1
    classic-aspects==0.0.1
    classic-components==0.0.1
    classic-http-api==0.0.2
    classic-http-auth==0.2.1
    classic-messaging==0.0.2
    classic-messaging-kombu==0.0.3
    classic-sql-storage==0.0.1
    PyJWT==2.3.0


[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-sugar~=0.9.4
